Build 2.0.0500 - Fixed issue #15022, Added context menu for document panes.
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@90390 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -53,7 +53,7 @@
                     </avalonDockLayout:LayoutAnchorablePane>
                     <avalonDockLayout:LayoutDocumentPaneGroup>
                         <avalonDockLayout:LayoutDocumentPane>
-                            <avalonDockLayout:LayoutDocument Title="Document 1">
+                            <avalonDockLayout:LayoutDocument Title="Document 1" IconSource="/AvalonDock.TestApp;component/Images/alarm-clock-blue.png">
                                 <TextBox Text="Document 1 Content"/>
                             </avalonDockLayout:LayoutDocument>
                             <avalonDockLayout:LayoutDocument Title="Document 2">
