--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -1,9 +1,7 @@
 ﻿<Window x:Class="AvalonDock.MVVMTestApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:avalonDock="clr-namespace:AvalonDock;assembly=AvalonDock"
-        xmlns:avalonDockControls="clr-namespace:AvalonDock.Controls;assembly=AvalonDock"
-        xmlns:avalonDockLayout="clr-namespace:AvalonDock.Layout;assembly=AvalonDock"
+        xmlns:avalonDock="http://avalondock.codeplex.com"
         xmlns:local="clr-namespace:AvalonDock.MVVMTestApp"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         Title="MainWindow" Height="350" Width="525">
@@ -118,13 +116,13 @@
                 </DataTemplate>
             </avalonDock:DockingManager.AnchorableTitleTemplate>
 
-            <avalonDockLayout:LayoutRoot>
-                <avalonDockLayout:LayoutPanel>
-                    <avalonDockLayout:LayoutDocumentPane/>
-                    <avalonDockLayout:LayoutAnchorablePane DockWidth="150">
-                    </avalonDockLayout:LayoutAnchorablePane>
-                </avalonDockLayout:LayoutPanel>
-            </avalonDockLayout:LayoutRoot>
+            <avalonDock:LayoutRoot>
+                <avalonDock:LayoutPanel>
+                    <avalonDock:LayoutDocumentPane/>
+                    <avalonDock:LayoutAnchorablePane DockWidth="150">
+                    </avalonDock:LayoutAnchorablePane>
+                </avalonDock:LayoutPanel>
+            </avalonDock:LayoutRoot>
         </avalonDock:DockingManager>
     </Grid>
 </Window>
