--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="AvalonDock.TestApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:avalonDock="clr-namespace:AvalonDock;assembly=AvalonDock"
-        xmlns:avalonDockControls="clr-namespace:AvalonDock.Controls;assembly=AvalonDock"
-        xmlns:avalonDockLayout="clr-namespace:AvalonDock.Layout;assembly=AvalonDock"
-        xmlns:avalonDockVS2010Theme="clr-namespace:AvalonDock.Themes;assembly=AvalonDock.Themes.VS2010"
+        xmlns:avalonDock="http://avalondock.codeplex.com"
         xmlns:winformsIntegration="clr-namespace:System.Windows.Forms.Integration;assembly=WindowsFormsIntegration"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
@@ -42,50 +39,50 @@
         
         <avalonDock:DockingManager Grid.Row="1" x:Name="dockManager" >
             <avalonDock:DockingManager.Theme>
-                <avalonDockVS2010Theme:VS2010Theme/>
+                <avalonDock:VS2010Theme/>
             </avalonDock:DockingManager.Theme>
-            <avalonDockLayout:LayoutRoot PropertyChanged="OnLayoutRootPropertyChanged">
-                <avalonDockLayout:LayoutPanel Orientation="Horizontal">
-                    <avalonDockLayout:LayoutAnchorablePane DockWidth="100">
-                        <avalonDockLayout:LayoutAnchorable x:Name="winFormsWindow" Title="WinForms Window">
+            <avalonDock:LayoutRoot PropertyChanged="OnLayoutRootPropertyChanged">
+                <avalonDock:LayoutPanel Orientation="Horizontal">
+                    <avalonDock:LayoutAnchorablePane DockWidth="100">
+                        <avalonDock:LayoutAnchorable x:Name="winFormsWindow" Title="WinForms Window">
                             <winformsIntegration:WindowsFormsHost x:Name="winFormsHost"/>
-                        </avalonDockLayout:LayoutAnchorable>
-                    </avalonDockLayout:LayoutAnchorablePane>
-                    <avalonDockLayout:LayoutDocumentPaneGroup>
-                        <avalonDockLayout:LayoutDocumentPane>
-                            <avalonDockLayout:LayoutDocument Title="Document 1" IconSource="/AvalonDock.TestApp;component/Images/alarm-clock-blue.png">
+                        </avalonDock:LayoutAnchorable>
+                    </avalonDock:LayoutAnchorablePane>
+                    <avalonDock:LayoutDocumentPaneGroup>
+                        <avalonDock:LayoutDocumentPane>
+                            <avalonDock:LayoutDocument Title="Document 1" IconSource="/AvalonDock.TestApp;component/Images/alarm-clock-blue.png">
                                 <TextBox Text="Document 1 Content"/>
-                            </avalonDockLayout:LayoutDocument>
-                            <avalonDockLayout:LayoutDocument Title="Document 2">
+                            </avalonDock:LayoutDocument>
+                            <avalonDock:LayoutDocument Title="Document 2">
                                 <TextBox Text="{Binding TestTimer, Mode=OneWay, StringFormat='Document 2 Attached to Timer ->\{0\}'}"/>
-                            </avalonDockLayout:LayoutDocument>
-                        </avalonDockLayout:LayoutDocumentPane>
-                    </avalonDockLayout:LayoutDocumentPaneGroup>
-                    <avalonDockLayout:LayoutAnchorablePaneGroup DockWidth="150">
-                        <avalonDockLayout:LayoutAnchorablePane>
-                            <avalonDockLayout:LayoutAnchorable x:Name="ToolWindow1" Title="Tool Window 1">
+                            </avalonDock:LayoutDocument>
+                        </avalonDock:LayoutDocumentPane>
+                    </avalonDock:LayoutDocumentPaneGroup>
+                    <avalonDock:LayoutAnchorablePaneGroup DockWidth="150">
+                        <avalonDock:LayoutAnchorablePane>
+                            <avalonDock:LayoutAnchorable x:Name="ToolWindow1" Title="Tool Window 1">
                                 <TextBox Text="{Binding TestTimer, Mode=OneWay, StringFormat='Tool Window 1 Attached to Timer ->\{0\}'}"/>
-                            </avalonDockLayout:LayoutAnchorable>
-                            <avalonDockLayout:LayoutAnchorable x:Name="ToolWindow2" Title="Tool Window 2">
+                            </avalonDock:LayoutAnchorable>
+                            <avalonDock:LayoutAnchorable x:Name="ToolWindow2" Title="Tool Window 2">
                                 <TextBlock Text="{Binding FocusedElement}"/>
-                            </avalonDockLayout:LayoutAnchorable>
-                        </avalonDockLayout:LayoutAnchorablePane>
-                    </avalonDockLayout:LayoutAnchorablePaneGroup>
-                </avalonDockLayout:LayoutPanel>
+                            </avalonDock:LayoutAnchorable>
+                        </avalonDock:LayoutAnchorablePane>
+                    </avalonDock:LayoutAnchorablePaneGroup>
+                </avalonDock:LayoutPanel>
 
-                <avalonDockLayout:LayoutRoot.LeftSide>
-                    <avalonDockLayout:LayoutAnchorSide>
-                        <avalonDockLayout:LayoutAnchorGroup>
-                            <avalonDockLayout:LayoutAnchorable Title="AutoHide1 Content" IconSource="/AvalonDock.TestApp;component/Images/address-book--pencil.png">
+                <avalonDock:LayoutRoot.LeftSide>
+                    <avalonDock:LayoutAnchorSide>
+                        <avalonDock:LayoutAnchorGroup>
+                            <avalonDock:LayoutAnchorable Title="AutoHide1 Content" IconSource="/AvalonDock.TestApp;component/Images/address-book--pencil.png">
                                 <TextBox Text="{Binding TestTimer, Mode=OneWay, StringFormat='AutoHide Attached to Timer ->\{0\}'}"/>
-                            </avalonDockLayout:LayoutAnchorable>
-                            <avalonDockLayout:LayoutAnchorable Title="AutoHide2 Content">
+                            </avalonDock:LayoutAnchorable>
+                            <avalonDock:LayoutAnchorable Title="AutoHide2 Content">
                                 <TextBox Background="{Binding TestBackground}"/>
-                            </avalonDockLayout:LayoutAnchorable>
-                        </avalonDockLayout:LayoutAnchorGroup>
-                    </avalonDockLayout:LayoutAnchorSide>
-                </avalonDockLayout:LayoutRoot.LeftSide>
-            </avalonDockLayout:LayoutRoot>
+                            </avalonDock:LayoutAnchorable>
+                        </avalonDock:LayoutAnchorGroup>
+                    </avalonDock:LayoutAnchorSide>
+                </avalonDock:LayoutRoot.LeftSide>
+            </avalonDock:LayoutRoot>
         </avalonDock:DockingManager>
     </Grid>
 </Window>
