Build 2.0.0521 - Fixed issue #15031 and other dragging issues
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@90448 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -33,6 +33,9 @@
                                    ActiveContent="{Binding ActiveDocument, Mode=TwoWay, Converter={StaticResource ActiveDocumentConverter}}"
                                    DocumentCloseCommand="{Binding CloseCommand}"
                                    Grid.Row="1">
+            <avalonDock:DockingManager.Theme>
+                <avalonDock:VS2010Theme/>
+            </avalonDock:DockingManager.Theme>
             <avalonDock:DockingManager.DocumentTemplateSelector>
                 <local:DocumentTemplateSelector>
                     <local:DocumentTemplateSelector.FileViewTemplate>
